<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:background="@drawable/button_background"
            android:layout_margin="10dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:background="@drawable/button_background"
            android:layout_margin="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/difficulty"
            android:gravity="center"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/score"
            android:gravity="center"
            android:textColor="#000000"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"/>

</RelativeLayout>